--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body{
   align-items:center;
   background: #2c3338;
   font-family: cursive;
+  background-image: url("https://res.cloudinary.com/dhakkgvjc/image/upload/v1670920554/vntb_qefops.avif");
   
 }
 #frm_login{
